--- a/examples/notebooks/vuetify/appExample4.ipynb
+++ b/examples/notebooks/vuetify/appExample4.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "b609af09",
+   "execution_count": 1,
+   "id": "520527eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "5203929e",
+   "execution_count": 2,
+   "id": "f06e74b7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fab7e15adf874de69c1bec3ec6a1f999",
+       "model_id": "bbf286e7c56142f2a25dbc70d4511c37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,8 +156,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "ea6745a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "voila                         0.2.16\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip list | grep voila"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "faa93917",
+   "id": "bbaa4ef5",
    "metadata": {},
    "outputs": [],
    "source": []
