Fixed bug in geojsonUtils module

--- a/vois/interMapTest.ipynb
+++ b/vois/interMapTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f5d412",
+   "id": "3c82d62f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1498e9",
+   "id": "6960da76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c26d282d",
+   "id": "9e8a295f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08e2c619",
+   "id": "668f06d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee83ecc0",
+   "id": "d2a86680",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "329b044d",
+   "id": "68356e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f38dab",
+   "id": "23b60071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b910a6f",
+   "id": "fbd34ec8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c7e8dd",
+   "id": "af5f90fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb575b13",
+   "id": "ef3a4ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1024ec7f",
+   "id": "3cc453cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,17 +512,17 @@
     "inter.identifyPopup(m,p)\n",
     "\n",
     "# Display the trivariate choropleth legend\n",
-    "out = widgets.Output(layout=Layout(width='32vw', height='43.5vh'))\n",
+    "out = widgets.Output(layout=Layout(width='32vw', height='44vh'))\n",
     "with out:\n",
     "    display(HTML(svg))\n",
     "    \n",
-    "display(out)"
+    "display(widgets.HBox([out,m]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7b44a4b",
+   "id": "bc0ca9aa",
    "metadata": {},
    "outputs": [],
    "source": []
