Added svgsGrid widget

--- a/docs/3.2_referenceVuetify.rst
+++ b/docs/3.2_referenceVuetify.rst
@@ -270,6 +270,14 @@ sortableList widget
 
 .. image:: figures/line.png
 
+svgsGrid widget
+---------------
+
+.. automodule:: svgsGrid
+    :members:
+
+.. image:: figures/line.png
+
 switch widget
 -------------
 
