--- a/vois/interMapTest.ipynb
+++ b/vois/interMapTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c82d62f",
+   "execution_count": 1,
+   "id": "1edc675d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6960da76",
+   "id": "66aee851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e8a295f",
+   "id": "ed953644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "668f06d3",
+   "id": "3d7e5b16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2a86680",
+   "id": "2837f42f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68356e45",
+   "id": "91c709ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b60071",
+   "id": "28f83c28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,10 +305,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbd34ec8",
+   "execution_count": 2,
+   "id": "de030342",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 356 312\" preserveAspectRatio=\"xMidYMid meet\" width=\"356.000000px\" height=\"calc(312.000000px + 20px)\" version=\"1.1\">\n",
+       "<text x=\"196.000000\" y=\"19.800000\" text-anchor=\"middle\" font-size=\"18.900000\" fill=\"black\" font-weight=\"500\" >Example of Bivariate Choropleth Map</text><text x=\"0\" y=\"0\" text-anchor=\"middle\" font-size=\"18.000000\" fill=\"black\" font-weight=\"500\" transform=\"translate(14.400000,148.800000) rotate(-90)\">Province initials</text><text x=\"196.000000\" y=\"306.600000\" text-anchor=\"middle\" font-size=\"18.000000\" fill=\"black\" font-weight=\"500\" >Province area</text><text x=\"0\" y=\"0\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" transform=\"translate(32.400000,228.800000) rotate(-90)\">< FE</text><rect style=\"fill:#f3f3f3;\" x=\"36\" y=\"188\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] < 'FE') and ([SHAPE_AREA] < 2500000000)</title></rect>\n",
+       "<rect style=\"fill:#d2f1df;\" x=\"116\" y=\"188\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] < 'FE') and ([SHAPE_AREA] >= 2500000000 and [SHAPE_AREA] <= 4500000000)</title></rect>\n",
+       "<rect style=\"fill:#b0ecc8;\" x=\"196\" y=\"188\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] < 'FE') and ([SHAPE_AREA] > 4500000000 and [SHAPE_AREA] <= 7500000000)</title></rect>\n",
+       "<rect style=\"fill:#8be2ae;\" x=\"276\" y=\"188\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] < 'FE') and ([SHAPE_AREA] > 7500000000)</title></rect>\n",
+       "<text x=\"0\" y=\"0\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" transform=\"translate(32.400000,148.800000) rotate(-90)\">in [FE,PU]</text><rect style=\"fill:#eac5dd;\" x=\"36\" y=\"108\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] >= 'FE' and [SIGLA] <= 'PU') and ([SHAPE_AREA] < 2500000000)</title></rect>\n",
+       "<rect style=\"fill:#d2c5dd;\" x=\"116\" y=\"108\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] >= 'FE' and [SIGLA] <= 'PU') and ([SHAPE_AREA] >= 2500000000 and [SHAPE_AREA] <= 4500000000)</title></rect>\n",
+       "<rect style=\"fill:#b0c5c8;\" x=\"196\" y=\"108\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] >= 'FE' and [SIGLA] <= 'PU') and ([SHAPE_AREA] > 4500000000 and [SHAPE_AREA] <= 7500000000)</title></rect>\n",
+       "<rect style=\"fill:#8bc5ae;\" x=\"276\" y=\"108\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] >= 'FE' and [SIGLA] <= 'PU') and ([SHAPE_AREA] > 7500000000)</title></rect>\n",
+       "<text x=\"0\" y=\"0\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" transform=\"translate(32.400000,68.800000) rotate(-90)\">> PU</text><rect style=\"fill:#e6a3d0;\" x=\"36\" y=\"28\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] > 'PU') and ([SHAPE_AREA] < 2500000000)</title></rect>\n",
+       "<rect style=\"fill:#d2a3d0;\" x=\"116\" y=\"28\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] > 'PU') and ([SHAPE_AREA] >= 2500000000 and [SHAPE_AREA] <= 4500000000)</title></rect>\n",
+       "<rect style=\"fill:#b0a3c8;\" x=\"196\" y=\"28\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] > 'PU') and ([SHAPE_AREA] > 4500000000 and [SHAPE_AREA] <= 7500000000)</title></rect>\n",
+       "<rect style=\"fill:#8ba3ae;\" x=\"276\" y=\"28\" width=\"80\" height=\"80\" stroke-width=\"0\"><title>([SIGLA] > 'PU') and ([SHAPE_AREA] > 7500000000)</title></rect>\n",
+       "<text x=\"76.000000\" y=\"282.300000\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" >Small</text><text x=\"156.000000\" y=\"282.300000\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" >Medium</text><text x=\"236.000000\" y=\"282.300000\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" >Large</text><text x=\"316.000000\" y=\"282.300000\" text-anchor=\"middle\" font-size=\"12.600000\" fill=\"black\" font-weight=\"400\" >XLarge</text></svg>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a57c848847647308e1457f43b720482",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[41.292737833950056, 12.573407433638925], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##################################################################################################\n",
     "# Bivariate choropleth map on italian provinces\n",
@@ -356,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5f90fa",
+   "id": "00e5ea60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef3a4ec0",
+   "id": "783d8bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,10 +490,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3cc453cc",
+   "execution_count": 3,
+   "id": "889e18fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5638effa294040e1bf7c93a6d48c6e55",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Output(layout=Layout(height='44vh', width='32vw')), Map(center=[48.917169, 11.407965], controls…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "##################################################################################################\n",
     "# Complex trivariate choropleth map\n",
@@ -522,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc0ca9aa",
+   "id": "6c64303a",
    "metadata": {},
    "outputs": [],
    "source": []
