--- a/vois/vuetify/dialogGenericTest.ipynb
+++ b/vois/vuetify/dialogGenericTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e91ac51",
+   "execution_count": 1,
+   "id": "a53cc20a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce9eeeadcdef4955a7e59ef925ccb947",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -37,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "042dbfdb",
+   "id": "dc8a156b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8597e974",
+   "id": "5c2c5b10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c59a506",
+   "id": "7566766b",
    "metadata": {},
    "outputs": [],
    "source": []
