--- a/vois/vuetify/palettePickerTest.ipynb
+++ b/vois/vuetify/palettePickerTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b738038",
+   "execution_count": 3,
+   "id": "ffb36c27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "635cb82357a84db4895eec97313b231f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Html(children=[Select(background_color='white', chips=False, class_='pa-0 mx-0 my-1 mb-n4', cle…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3cf2de2bd084a0990675bd83b093c9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run palettePicker.py\n",
     "%run selectSingle.py\n",
@@ -72,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d25d26",
+   "id": "1fe16a88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc12da8d",
+   "id": "30c39a50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb0b5a0",
+   "id": "55c37b73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e508b466",
+   "execution_count": 2,
+   "id": "c9e334c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "431c0096",
+   "id": "02d52412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5b02029",
+   "id": "56038065",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
