Solved problems with new version of traitlets

--- a/vois/vuetify/labelTest.ipynb
+++ b/vois/vuetify/labelTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "796c602c",
+   "execution_count": null,
+   "id": "e8aa4d62",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1832c8cd4aaa45c6859413a4ad70f474",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Container(children=[Item(children=[Tooltip(bottom=True, children=['Example tooltip text'], colo…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd71f269e066489eba191ed59125fb45",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Container(children=[Card(children=['Test label 2', Icon(children=['mdi-car-light-high'], color=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run label.py\n",
     "\n",
@@ -47,63 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0af2729a",
+   "execution_count": null,
+   "id": "d4d0c677",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e3fb10f66ff4d3588275566fe4bd829",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Container(children=[Card(children=['Test label ', Icon(children=['mdi-car-light-high'], color='…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import label\n",
     "\n",
     "lab = label.label('Test label ', textweight=300, margins=2,\n",
     "                  icon='mdi-car-light-high', iconcolor='red',\n",
-    "                  iconlarge=True, height=22)\n",
+    "                  iconlarge=False, height=22)\n",
     "\n",
     "display(lab.draw())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c8bd52e9",
+   "execution_count": null,
+   "id": "658ee370",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba4575f9ed5145069190cbb5856500e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[Container(children=[Card(children=['New text for the label', Icon(children=['mdi-car-light-high…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "New text for the label\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lab.text = 'New text for the label'\n",
     "display(lab.draw())\n",
@@ -113,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d913893e",
+   "id": "3271496d",
    "metadata": {},
    "outputs": [],
    "source": []
