--- a/vois/vuetify/treeviewTest.ipynb
+++ b/vois/vuetify/treeviewTest.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cfb5c7b3",
+   "execution_count": 20,
+   "id": "a277a70d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6b7f2edf",
+   "execution_count": 73,
+   "id": "ef9a92b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43cd779afd1d451cb88e2074a4b87ad3",
+       "model_id": "042c0de7681c4f188869f3fcaf53ce73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "80a81a0a",
+   "execution_count": 74,
+   "id": "0052c608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d689fb8f",
+   "execution_count": 75,
+   "id": "db837006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "18a6bb35",
+   "execution_count": 67,
+   "id": "1a354830",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,18 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28291d6d",
+   "execution_count": 68,
+   "id": "3e2db463",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A.2'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "top.getActive()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fba5a4a",
+   "execution_count": 69,
+   "id": "354d20b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b1cee80",
+   "execution_count": 70,
+   "id": "9d07a6a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91932a0c",
+   "id": "ed81ad6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e337e33",
+   "id": "3f529189",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be95a14d",
+   "id": "3575f217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "357f0ad8",
+   "id": "d4e85e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86b8c7b0",
+   "id": "e4c66a8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b1153dc",
+   "id": "54562784",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29b17e14",
+   "id": "fc44d2a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,10 +193,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85029722",
+   "execution_count": 76,
+   "id": "80a570e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Element</th>\n",
+       "      <th>parenticon</th>\n",
+       "      <th>icon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gis</td>\n",
+       "      <td>gis software</td>\n",
+       "      <td>mdi-fire</td>\n",
+       "      <td>mdi-filmstrip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>geospatial</td>\n",
+       "      <td>geospatial data</td>\n",
+       "      <td>mdi-fire</td>\n",
+       "      <td>mdi-cloud</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>geospatial</td>\n",
+       "      <td>geospatial applications</td>\n",
+       "      <td>mdi-fire</td>\n",
+       "      <td>mdi-flower</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>spatial analysis</td>\n",
+       "      <td>spatial join</td>\n",
+       "      <td>mdi-fire</td>\n",
+       "      <td>mdi-filmstrip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>spatial analysis</td>\n",
+       "      <td>geospatial data tools</td>\n",
+       "      <td>mdi-fire</td>\n",
+       "      <td>mdi-anchor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Group                  Element parenticon           icon\n",
+       "0               gis             gis software   mdi-fire  mdi-filmstrip\n",
+       "1        geospatial          geospatial data   mdi-fire      mdi-cloud\n",
+       "2        geospatial  geospatial applications   mdi-fire     mdi-flower\n",
+       "3  spatial analysis             spatial join   mdi-fire  mdi-filmstrip\n",
+       "4  spatial analysis    geospatial data tools   mdi-fire     mdi-anchor"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3fee7f8e59c243359658b706f24da004",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='#f8bd1a', events=['activate', 'change_selection'], items=[…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# SELECTABLE TREE VIEW CREATED FROM TWO COLUMNS OF A PANDAS DATAFRAME\n",
     "%run treeview.py\n",
@@ -230,10 +335,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "102b784e",
+   "execution_count": 77,
+   "id": "b3392be9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>parent</th>\n",
+       "      <th>child</th>\n",
+       "      <th>nephew</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Johnny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Lisa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ann</td>\n",
+       "      <td>Hellen</td>\n",
+       "      <td>July</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ann</td>\n",
+       "      <td>Sue</td>\n",
+       "      <td>Ellen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ann</td>\n",
+       "      <td>Claire</td>\n",
+       "      <td>Pieter</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  parent   child  nephew\n",
+       "0   John    Mary  Johnny\n",
+       "1   John   Peter    Lisa\n",
+       "2    Ann  Hellen    July\n",
+       "3    Ann     Sue   Ellen\n",
+       "4    Ann  Claire  Pieter"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7fa6d4b4da941d89186ce9c906df924",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(activatable=True, color='#f8bd1a', events=['activate', 'change_se…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TREEVIEW FROM 3 COLUMNS OF A PANDAS DATAFRAME\n",
     "%run treeview.py\n",
@@ -266,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1cb882d",
+   "id": "f50ad0f5",
    "metadata": {},
    "outputs": [],
    "source": []
